--- a/CHEETOS/Venetian.html
+++ b/CHEETOS/Venetian.html
@@ -2288,14 +2288,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(44px, 330px) rotate(0deg);
         transform: translate(0, 0) translate(44px, 330px) rotate(0deg);
 }
-/*#/#*//*#i63.text.css:text/base/css*/
-#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: AmsiProCond-Ultra; font-size: 19px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i63.i64.positioning.css:positioning/base/css.2*/
-#i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 190px; height: 47px;
-        -ms-transform: translate(0, 0) translate(63px, 275px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(63px, 275px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(63px, 275px) rotate(0deg);
-        transform: translate(0, 0) translate(63px, 275px) rotate(0deg);
+/*#/#*//*#i125.image.css:image/base/css*/
+#i125 { opacity: 1; }
+/*#/#*//*#i125.i126.positioning.css:positioning/base/css.2*/
+#i125 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 204px; height: 57px;
+        -ms-transform: translate(0, 0) translate(55px, 269px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(55px, 269px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(55px, 269px) rotate(0deg);
+        transform: translate(0, 0) translate(55px, 269px) rotate(0deg);
 }
 /*#/#*//*#i91.image.css:image/base/css*/
 #i91 { opacity: 1; }
@@ -2366,8 +2366,8 @@ url('fonts/') format('svg');
 <div id="i68">Crea monstruos con las variedades de Cheetos®</div>
 <!--#/#--><!--#i113.text.html:text/html-->
 <div id="i113">1.</div>
-<!--#/#--><!--#i63.text.html:text/html-->
-<div id="i63">¡PARTICIPA CON CHEETOS® MUSEO MONSTRUOSO!</div>
+<!--#/#--><!--#i125.image.html:image/html-->
+<img id="i125" src="https://i.imgur.com/bPTM1iV.jpg"/>
 <!--#/#--><!--#i91.image.html:image/html-->
 <img id="i91" src="https://i.imgur.com/kZThkuS.png"/>
 <!--#/#--><!--#i99.shape.html:shape/html-->
@@ -2429,6 +2429,8 @@ document.addEventListener('DOMContentLoaded', function() {
 
 /*#/#*//*#i16.i17.positioning.js:positioning/base/js.2*/
 bmShow('i16');
+/*#/#*//*#i123.i124.positioning.js:positioning/base/js.2*/
+bmShow('i123');
 /*#/#*//*#i46.image.js:image/base/js*/
 
 /*#/#*//*#i46.i47.positioning.js:positioning/base/js.2*/
@@ -2445,8 +2447,10 @@ bmShow('i115');
 bmShow('i68');
 /*#/#*//*#i113.i114.positioning.js:positioning/base/js.2*/
 bmShow('i113');
-/*#/#*//*#i63.i64.positioning.js:positioning/base/js.2*/
-bmShow('i63');
+/*#/#*//*#i125.image.js:image/base/js*/
+
+/*#/#*//*#i125.i126.positioning.js:positioning/base/js.2*/
+bmShow('i125');
 /*#/#*//*#i91.image.js:image/base/js*/
 
 /*#/#*//*#i91.i92.positioning.js:positioning/base/js.2*/
@@ -2466,8 +2470,6 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i123.i124.positioning.js:positioning/base/js.2*/
-bmShow('i123');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2540,10 +2542,11 @@ data: /*!*/{}/*!*/;
 name: 1.; customName: 1;
 /*#/#*//*#i113.i114.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i63.text.meta:text/meta*/
-name: ¡PARTICIPA CON CHEETOS® MUSEO MONSTRUOSO!; customName: false;
-/*#/#*//*#i63.i64.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
+/*#/#*//*#i125.image.meta:image/meta*/
+name: TITULO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i125.i126.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i91.image.meta:image/meta*/
 name: MARCO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
