--- a/ConfortAuto Portugués/Venetian300x250.html
+++ b/ConfortAuto Portugués/Venetian300x250.html
@@ -2260,7 +2260,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/CkQBEOR.png"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/hCZUJ8P.png"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
 <dataimg id="i5" src="https://i.imgur.com/oM4X0WF.png"></dataimg>
 <!--#/#--><!--#i2.i37.slice-image.html:slice-image/html.1-->
@@ -2268,7 +2268,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#-->
 </div>
 <!--#/#--><!--#i16.image.html:image/html-->
-<img id="i16" src="https://i.imgur.com/bPDeuYO.png"/>
+<img id="i16" src="https://i.imgur.com/K9Q3kco.png"/>
 <!--#/#--><!--#i26.button.html:button/html-->
 <button id="i26"></button>
 <!--#/#--><!--#/#--><!--#js:common/js-->
