--- a/ConforAuto/Venetian300x600.html
+++ b/ConforAuto/Venetian300x600.html
@@ -2254,7 +2254,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i16.image.html:image/html-->
-<img id="i16" src="https://i.imgur.com/bPDeuYO.png"/>
+<img id="i16" src="https://i.imgur.com/K9Q3kco.png"/>
 <!--#/#--><!--#i7.text.html:text/html-->
 <div id="i7">Goodyear es la mejor elección para tu coche y la puedes encontrar en Confortauto. Elige lo mejor con la profesionalidad de los talleres Confortauto.</div>
 <!--#/#--><!--#i32.text.html:text/html-->
@@ -2263,7 +2263,7 @@ de neumáticos</div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/KmMR8Ie.png"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/wxzgubf.png"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
 <dataimg id="i5" src="https://i.imgur.com/ludk6mr.png"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
