--- a/ConforAuto/Fijo300x600.html
+++ b/ConforAuto/Fijo300x600.html
@@ -253,7 +253,7 @@
             
 						</span>-->
                         <div class="logo">
-                            <img src="https://i.imgur.com/K9Q3kco.png" style="height:40px; margin-top:-55px;">
+                            <img src="https://i.imgur.com/Qu91ATK.png" style="height:45px; margin-top:-45px;">
 
                         </div>
                     
