--- a/ConforAuto/Venetian300x600.html
+++ b/ConforAuto/Venetian300x600.html
@@ -2254,7 +2254,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i16.image.html:image/html-->
-<img id="i16" src="https://i.imgur.com/K9Q3kco.png"/>
+<img id="i16" src="https://i.imgur.com/Qu91ATK.png"/>
 <!--#/#--><!--#i7.text.html:text/html-->
 <div id="i7">Goodyear es la mejor elección para tu coche y la puedes encontrar en Confortauto. Elige lo mejor con la profesionalidad de los talleres Confortauto.</div>
 <!--#/#--><!--#i32.text.html:text/html-->
