--- a/ConforAuto/Fijo300x600.html
+++ b/ConforAuto/Fijo300x600.html
@@ -253,7 +253,7 @@
             
 						</span>-->
                         <div class="logo">
-                            <img src="https://i.imgur.com/Qu91ATK.png" style="height:47px; margin-top:-35px;">
+                            <img src="https://i.imgur.com/bPDeuYO.png" style="height:47px; margin-top:-35px;">
 
                         </div>
                     
