--- a/ConfortAuto Portugués/Venetian300x600.html
+++ b/ConfortAuto Portugués/Venetian300x600.html
@@ -2254,7 +2254,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i16.image.html:image/html-->
-<img id="i16" src="https://i.imgur.com/Qu91ATK.png"/>
+<img id="i16" src="https://i.imgur.com/bPDeuYO.png"/>
 <!--#/#--><!--#i7.text.html:text/html-->
 <div id="i7">Goodyear é a melhor escolha para o seu veículo e pode encontrar os pneus na Confortauto. Escolha o melhor com o profissionalismo dos centros Confortauto.</div>
 <!--#/#--><!--#i32.text.html:text/html-->
