--- a/ConforAuto/Venetian300x250.html
+++ b/ConforAuto/Venetian300x250.html
@@ -2268,7 +2268,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#-->
 </div>
 <!--#/#--><!--#i16.image.html:image/html-->
-<img id="i16" src="https://i.imgur.com/bPDeuYO.png"/>
+<img id="i16" src="https://i.imgur.com/4v7xuwB.png"/>
 <!--#/#--><!--#i26.button.html:button/html-->
 <button id="i26"></button>
 <!--#/#--><!--#/#--><!--#js:common/js-->
