--- a/ConforAuto/Fijo300x250.html
+++ b/ConforAuto/Fijo300x250.html
@@ -246,7 +246,7 @@
                         </span> </div>
                         <div>
                     
-                        <img class="logo" src="https://i.imgur.com/bPDeuYO.png"  style="height:27px;margin-top:2px;"> 
+                        <img class="logo" src="https://i.imgur.com/4v7xuwB.png"  style="height:27px;margin-top:2px;"> 
                     </div>
                   
                 </div>
