--- a/ConfortAuto Portugués/Fijo300x600.html
+++ b/ConfortAuto Portugués/Fijo300x600.html
@@ -253,7 +253,7 @@
             
 						</span>-->
                         <div class="logo">
-                            <img src="https://i.imgur.com/bPDeuYO.png" style="height:43px; margin-top:-55px;">
+                            <img src="https://i.imgur.com/4v7xuwB.png" style="height:43px; margin-top:-55px;">
 
                         </div>
                     
