--- a/ConfortAuto GLP/Slider300x600.html
+++ b/ConfortAuto GLP/Slider300x600.html
@@ -211,7 +211,7 @@
             float: right;
             
             text-align: center;
-            margin-top: -25px;
+            margin-top: -35px;
             margin-right: -18px;
         }
     </style>
@@ -256,7 +256,7 @@
             
 						</span>
                         <div class="logo">
-                            <img src="https://i.imgur.com/I2RnxnJ.png" style="height: 35px;">
+                            <img src="https://i.imgur.com/gENmUp6.png" style="height: 48px;">
 
                         </div>
                     </div>
