--- a/ConfortAuto GLP/Venetian320x480.html
+++ b/ConfortAuto GLP/Venetian320x480.html
@@ -2152,7 +2152,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
-#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 127px; height: 32px;
+#i16 { position: absolute; top:-10px; left:20px; overflow: hidden; width: 100px; height: 40px;
         -ms-transform: translate(0, 0) translate(192px, 445px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(192px, 445px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(192px, 445px) rotate(0deg);
@@ -2256,7 +2256,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i32.text.html:text/html-->
 <div id="i32">Vehículos propulsados por GLP</div>
 <!--#/#--><!--#i16.image.html:image/html-->
-<img id="i16" src="https://i.imgur.com/I2RnxnJ.png"/>
+<img id="i16" src="https://i.imgur.com/gENmUp6.png"/>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
