--- a/ConfortAuto Portugués/Fijo300x600.html
+++ b/ConfortAuto Portugués/Fijo300x600.html
@@ -212,7 +212,7 @@
             height: 30px;
             text-align: center;
             margin-top: 9px;
-            margin-right: -8px;
+            margin-right: -15px;
         }
     </style>
 </head>
@@ -253,7 +253,7 @@
             
 						</span>-->
                         <div class="logo">
-                            <img src="https://i.imgur.com/4v7xuwB.png" style="height:43px; margin-top:-55px;">
+                            <img src="https://i.imgur.com/gENmUp6.png" style="height:50px; margin-top:-55px;">
 
                         </div>
                     
