--- a/ConfortAuto Portugués/Venetian300x250.html
+++ b/ConfortAuto Portugués/Venetian300x250.html
@@ -2170,7 +2170,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, -6px) rotate(0deg);
 }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
-#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 84px; height: 35px;
+#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 84px; height: 40px;
         -ms-transform: translate(0, 0) translate(212px, 211px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(212px, 211px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(212px, 211px) rotate(0deg);
@@ -2268,7 +2268,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#-->
 </div>
 <!--#/#--><!--#i16.image.html:image/html-->
-<img id="i16" src="https://i.imgur.com/4v7xuwB.png"/>
+<img id="i16" src="https://i.imgur.com/gENmUp6.png"/>
 <!--#/#--><!--#i26.button.html:button/html-->
 <button id="i26"></button>
 <!--#/#--><!--#/#--><!--#js:common/js-->
