--- a/ConfortAuto Portugués/Venetian300x600.html
+++ b/ConfortAuto Portugués/Venetian300x600.html
@@ -2194,7 +2194,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
-#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 113px; height: 47px;
+#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 113px; height: 50px;
         -ms-transform: translate(0, 0) translate(182px, 549px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(182px, 549px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(182px, 549px) rotate(0deg);
@@ -2254,7 +2254,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i16.image.html:image/html-->
-<img id="i16" src="https://i.imgur.com/4v7xuwB.png"/>
+<img id="i16" src="https://i.imgur.com/gENmUp6.png"/>
 <!--#/#--><!--#i7.text.html:text/html-->
 <div id="i7">Goodyear é a melhor escolha para o seu veículo e pode encontrar os pneus na Confortauto. Escolha o melhor com o profissionalismo dos centros Confortauto.</div>
 <!--#/#--><!--#i32.text.html:text/html-->
