--- a/Macropolis/Cube.html
+++ b/Macropolis/Cube.html
@@ -911,7 +911,7 @@ var el = document.getElementById('i91');
 
 el.addEventListener('click', function(e){
     /*#i282.i283.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/JdNHJtQbaxt'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://macropolis.com.pe/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -948,7 +948,7 @@ var el = document.getElementById('i95');
 
 el.addEventListener('click', function(e){
     /*#i278.i279.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/JdNHJtQbaxt'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://macropolis.com.pe/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -981,7 +981,7 @@ var el = document.getElementById('i99');
 
 el.addEventListener('click', function(e){
     /*#i280.i281.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/JdNHJtQbaxt'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://macropolis.com.pe/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
