--- a/Macropolis/FadeBig2.html
+++ b/Macropolis/FadeBig2.html
@@ -339,7 +339,7 @@
     </style>
     <script>
         function openUrl() {
-            window.open("https://macropolis.com.pe/index.html");
+            window.open("https://macropolis.com.pe/");
         }
     </script>
 </head>
