--- a/Macropolis/Venetian.html
+++ b/Macropolis/Venetian.html
@@ -2360,7 +2360,7 @@ var el = document.getElementById('i103');
 
 el.addEventListener('click', function(e){
     /*#i105.i106.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://macropolis.com.pe/index.html'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://macropolis.com.pe/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
